[tool.poetry]
name = "quantamagazine"
version = "0.1.0"
description = ""
authors = ["Jon Besga <jonan.bsg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^2.21.0"
pillow = "^10.4.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
